cloudformation/bjc-demo.json

{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Chef Automate Demo",
  "Parameters": {
    "AvailabilityZone": {
      "Description": "Availability Zone",
      "Type": "String",
      "Default": "us-west-2c"
    },
    "DemoName": {
      "Description": "Name of the customer or organization",
      "Type": "String",
      "Default": "bjc-demo"
    },
    "Version": {
      "Description": "Version",
      "Type": "String",
      "Default": "0.1.2"
    },
    "KeyName": {
      "Description": "Name of an existing ec2 KeyPair to enable SSH access",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
    },
    "SSHLocation": {
      "Description": "The IP address range that can be used to SSH to the EC2 instances",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "TTL": {
      "Description": "Time in hours for the demo to stay active. Default is 4, maximum is 720 hours (30 days).",
      "Type": "Number",
      "Default": 4,
      "MinValue": 0,
      "MaxValue": 720
    },
    "ChefServerAMI": {
      "Type": "String",
      "Default": "ami-67499a07",
      "Description": "AMI ID for the Chef Server"
    },
    "DeliveryServerAMI": {
      "Type": "String",
      "Default": "ami-aa4291ca",
      "Description": "AMI ID for the Delivery Server"
    },
    "ComplianceServerAMI": {
      "Type": "String",
      "Default": "ami-3f4a995f",
      "Description": "AMI ID for the Compliance Server"
    },
    "BuildNode1AMI": {
      "Type": "String",
      "Default": "ami-18bf6e78",
      "Description": "AMI ID for Build Node 1"
    },
    "BuildNode2AMI": {
      "Type": "String",
      "Default": "ami-95bd6cf5",
      "Description": "AMI ID for Build Node 2"
    },
    "BuildNode3AMI": {
      "Type": "String",
      "Default": "ami-95be6ff5",
      "Description": "AMI ID for Build Node 3"
    },
    "acceptanceAMI": {
      "Type": "String",
      "Default": "ami-a0b968c0",
      "Description": "AMI ID for acceptance"
    },
    "deliveredAMI": {
      "Type": "String",
      "Default": "ami-d4bf6eb4",
      "Description": "AMI ID for delivered"
    },
    "ecomacceptanceAMI": {
      "Type": "String",
      "Default": "ami-75a17015",
      "Description": "AMI ID for ecomacceptance"
    },
    "rehearsalAMI": {
      "Type": "String",
      "Default": "ami-eeba6b8e",
      "Description": "AMI ID for rehearsal"
    },
    "unionAMI": {
      "Type": "String",
      "Default": "ami-7ca1701c",
      "Description": "AMI ID for union"
    },
    "WindowsWorkstationAMI": {
      "Type": "String",
      "Default": "ami-304b9850",
      "Description": "AMI ID for the Windows Workstation"
    }
  },
  "Resources": {
    "InstanceProfile" : {
      "Type" : "AWS::IAM::InstanceProfile",
      "Properties" : {
        "Path" : "/",
        "Roles" : ["testKitchenAndKnifeEc2"]
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "VPC" ] ]
            }
          }
        ]
      }
    },
    "SubnetDelivery": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "172.31.54.0/24",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Delivery Subnet" ] ]
            }
          }
        ]
      }
    },
    "SubnetProd": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "172.31.62.0/24",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Prod Subnet" ] ]
            }
          }
        ]
      }
    },
    "SubnetWorkstations": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "172.31.10.0/24",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Workstations Subnet" ] ]
            }
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, " IG" ] ]
            }
          }
        ]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Demo RouteTable" ] ]
            }
          }
        ]
      }
    },
    "Route": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "SubnetRouteTableAssociationDelivery": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetDelivery"
        },
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      }
    },
    "SubnetRouteTableAssociationProd": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetProd"
        },
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      }
    },
    "SubnetRouteTableAssociationWorkstations": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetWorkstations"
        },
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      }
    },
    "NetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackId"
            },
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "NetworkAcl" ] ]
            }
          }
        ]
      }
    },
    "InboundNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "NetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0"
      }
    },
    "OutBoundNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "NetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0"
      }
    },
    "SubnetNetworkAclAssociationDelivery": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetDelivery"
        },
        "NetworkAclId": {
          "Ref": "NetworkAcl"
        }
      }
    },
    "SubnetNetworkAclAssociationProd": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetProd"
        },
        "NetworkAclId": {
          "Ref": "NetworkAcl"
        }
      }
    },
    "SubnetNetworkAclAssociationPOCWorkstations": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetWorkstations"
        },
        "NetworkAclId": {
          "Ref": "NetworkAcl"
        }
      }
    },
    "WindowsWorkstation": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "IamInstanceProfile" : {"Ref" : "InstanceProfile"},
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.135",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": {
          "Ref": "KeyName"
        },
        "ImageId": {
              "Ref": "WindowsWorkstationAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Workstation" ] ]
            }
          }
        ]
      }
    },
    "BuildNode1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.51",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname build-node-1\n"]]}
        },
        "ImageId": {
              "Ref": "BuildNode1AMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Build Node 1" ] ]
            }
          }
        ]
      }
    },
    "BuildNode2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.52",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname build-node-2\n"]]}
        },
        "ImageId": {
              "Ref": "BuildNode2AMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Build Node 2" ] ]
            }
          }
        ]
      }
    },
    "BuildNode3": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.53",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname build-node-3\n"]]}
        },
        "ImageId": {
              "Ref": "BuildNode3AMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Build Node 3" ] ]
            }
          }
        ]
      }
    },
    "acceptance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.101",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname acceptance\n"]]}
        },
        "ImageId": {
              "Ref": "acceptanceAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "acceptance" ] ]
            }
          }
        ]
      }
    },
    "delivered": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.102",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname delivered\n"]]}
        },
        "ImageId": {
              "Ref": "deliveredAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "delivered" ] ]
            }
          }
        ]
      }
    },
    "ecomacceptance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.103",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname ecomacceptance\n"]]}
        },
        "ImageId": {
              "Ref": "ecomacceptanceAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "ecomacceptance" ] ]
            }
          }
        ]
      }
    },
    "rehearsal": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.104",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname rehearsal\n"]]}
        },
        "ImageId": {
              "Ref": "rehearsalAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "rehearsal" ] ]
            }
          }
        ]
      }
    },
    "union": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "m3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.105",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname union\n"]]}
        },
        "ImageId": {
              "Ref": "unionAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "union" ] ]
            }
          }
        ]
      }
    },
    "ChefServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "c3.xlarge",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
      	"BlockDeviceMappings" : [
         	{
        	  "DeviceName" : "/dev/sda1",
        	  "Ebs" : { "VolumeSize" : "50" }
         	}
      	],
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.10",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname chef\n",
             "chef-server-ctl reconfigure\n"]]}
        },
        "ImageId": {
              "Ref": "ChefServerAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Chef Server" ] ]
            }
          }
        ]
      }
    },
    "DeliveryServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "c3.xlarge",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
      	"BlockDeviceMappings" : [
         	{
            	  "DeviceName" : "/dev/sda1",
            	  "Ebs" : { "VolumeSize" : "50" }
         	}
      	] ,
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.11",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname automate\n",
             "delivery-ctl reconfigure\n"]]}
        },
        "ImageId": {
              "Ref": "DeliveryServerAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Delivery Server" ] ]
            }
          }
        ]
      }
    },
    "ComplianceServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "c3.large",
        "AvailabilityZone": { "Ref": "AvailabilityZone" },
        "BlockDeviceMappings" : [
          {
                "DeviceName" : "/dev/sda1",
                "Ebs" : { "VolumeSize" : "8" }
          }
        ] ,
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "DemoSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "PrivateIpAddress": "172.31.54.12",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "SubnetDelivery"
            }
          }
        ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
             "#!/bin/bash -xe\n",
             "hostnamectl set-hostname compliance\n",
             "chef-compliance-ctl reconfigure\n"]]}
        },
        "ImageId": {
              "Ref": "ComplianceServerAMI"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join" : [ " ", [ { "Ref": "DemoName" }, "Compliance Server" ] ]
            }
          }
        ]
      }
    },
    "DemoSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "Enable required ports for Chef Server",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "0",
            "ToPort": "65535",
            "CidrIp": "172.31.0.0/16"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "3389",
            "ToPort": "3389",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "8",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "3389",
            "ToPort": "3389",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  },
  "Outputs": {
    "WindowsWorkstationPubDNS": {
      "Description": "Public IP address of the Windows Workstation",
      "Value": {
        "Fn::GetAtt": [
          "WindowsWorkstation",
          "PublicIp"
          ]
      }
    }
  }
}
